Primeros pasos en el home

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4604,7 +4604,7 @@ Start Home v3 style
   z-index: 1;
   overflow: hidden;
   border-radius: 20px;
-  background-image: url(../img/home3/banner-bg.jpg);
+  background-image: url(../img/pexels-home3.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: right bottom;
